# scaling-laws

./: .gitignore  README.md  data.py  dataloader.py  download_data.py  download_weights.py  eval.py  generate.py  model.py  pyproject.toml  train.py
scaling_laws/: data.py  model.py  utils.py
scripts/: download_data.py  download_weights.py
