[project]
name = "scaling-laws"
version = "0.1.0"
description = "Scaling law research."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "tensorflow>=2.21.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
